fixed word wrapping css

--- a/css/admin.css
+++ b/css/admin.css
@@ -373,7 +373,7 @@ table td {
     -webkit-box-shadow: 0 5px 20px #eee;
     box-shadow: 0 5px 20px #eee;
     padding: 1em;
-    word-break: break-word;
+    word-break: break-all;
 }
 
 img.mrq-icon {
@@ -1075,7 +1075,7 @@ nav.tabs li.active a {
     position: relative;
     text-align: left;
     border-top: 1px dotted #ccc;
-    word-break: break-word;
+    word-break: break-all;
 }
 
 .tag-panel.tag {
@@ -1175,7 +1175,7 @@ nav.tabs li.active a {
 
 .sidebar-wrapper {
     margin-top: -50px;
-    word-break: break-word;
+    word-break: break-all;
 }
 
 .sidebar {
